RESOLVED FIXED109914
[CSS Regions] Assertion in RenderFlowThread::removeRenderBoxRegionInfo
https://bugs.webkit.org/show_bug.cgi?id=109914
Summary [CSS Regions] Assertion in RenderFlowThread::removeRenderBoxRegionInfo
Andrei Bucur
Reported 2013-02-15 02:06:32 PST
Created attachment 188516 [details] Test that crashes It is possible to remove a box from a flow thread right after deleting a region from the chain. Without a layout to rebuild the region ranges for the box, an assertion is hit because some regions still have information about the box. See the test case attached.
Attachments
Test that crashes (656 bytes, text/html)
2013-02-15 02:06 PST, Andrei Bucur
no flags
Test that crashes v2 (658 bytes, text/html)
2013-02-15 04:05 PST, Andrei Bucur
no flags
Patch (8.61 KB, patch)
2013-02-15 06:48 PST, Andrei Bucur
no flags
Andrei Bucur
Comment 1 2013-02-15 04:05:27 PST
Created attachment 188532 [details] Test that crashes v2 The previous test didn't trigger the assert.
Andrei Bucur
Comment 2 2013-02-15 06:48:16 PST
Dave Hyatt
Comment 3 2013-02-18 17:59:09 PST
Comment on attachment 188556 [details] Patch r=me
WebKit Review Bot
Comment 4 2013-02-19 01:18:20 PST
Comment on attachment 188556 [details] Patch Rejecting attachment 188556 [details] from commit-queue. abucur@adobe.com does not have committer permissions according to http://trac.webkit.org/browser/trunk/Tools/Scripts/webkitpy/common/config/committers.py. - If you do not have committer rights please read http://webkit.org/coding/contributing.html for instructions on how to use bugzilla flags. - If you have committer rights please correct the error in Tools/Scripts/webkitpy/common/config/committers.py by adding yourself to the file (no review needed). The commit-queue restarts itself every 2 hours. After restart the commit-queue will correctly respect your committer rights.
WebKit Review Bot
Comment 5 2013-02-19 05:46:24 PST
Comment on attachment 188556 [details] Patch Clearing flags on attachment: 188556 Committed r143322: <http://trac.webkit.org/changeset/143322>
WebKit Review Bot
Comment 6 2013-02-19 05:46:27 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.